// {C} Copyright 2019 Pensando Systems Inc. All rights reserved.

syntax = "proto3";

// APIs to generate node auth tokens
package tokenauth;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/meta.proto";
import "tokenauth.proto";

// fileGrpcDest is the gRPC destination for this service
option (venice.fileGrpcDest) = "pen-cmd";
option (venice.fileCategory) = "tokenauth";

// fileApiServerBacked should be set to false to indicate that the set of services defined in this
// file are not backed by the API server.
option (venice.fileApiServerBacked) = false;

// Events service API
service TokenAuthV1 {
    option (venice.apiVersion) = "v1";

    rpc GenerateNodeToken (NodeTokenRequest) returns (NodeTokenResponse) {
      option (google.api.http) = {
        get: "/node"
      };
    }
}
